# android-ndk-xphase

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/pl/theliver/nativeapplicationxphase/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/PanoMaker/: DPPanoMakerProDLLMain.h
app/src/main/java/pl/theliver/nativeapplicationxphase/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/pl/theliver/nativeapplicationxphase/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
